--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,22 +1,33 @@
+{% load static %} <!-- 정적 파일 로딩 -->
 <html>
     <head>
         <title>WebWH blog</title>
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+        <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css"> <!-- (https://www.google.com/fonts)에서 Lobster 라는 글꼴을 가져온 것 -->
     </head>
     <body>
 
-        <div>
+        <div class="page-header">
             <h1><a href="">WebWH Blog</a></h1>
         </div>
 
-        <p>------------------------------------------------------------</p>
-        {% for post in posts %}
-            <div>
-                <p>published: {{ post.published_date }}</p>
-                <h1><a href="">{{ post.title }}</a></h1>
-                <p>{{ post.text|linebreaksbr }}</p> <!-- 파이프는 블로그 글 텍스트에서 행이 바뀌면 문단으로 변환하도록 하라는 의미 -->
-                <p>------------------------------------------------------------</p>
+        <div class="content container">
+            <div class="row">
+                <div class="col-md-8">
+                    {% for post in posts %}
+                        <div class="post">
+                            <div class="date">
+                                <p>published: {{ post.published_date }}</p>
+                            </div>
+                            <h1><a href="">{{ post.title }}</a></h1>
+                            <p>{{ post.text|linebreaksbr }}</p>
+                        </div>
+                    {% endfor %}
+                </div>
             </div>
-        {% endfor %}
+        </div>
         
     </body>
 </html>
