--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,5 +1,6 @@
 {% load static %} <!-- 정적 파일 로딩 -->
 <html>
+
     <head>
         <title>WebWH blog</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
@@ -7,13 +8,23 @@
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
         <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css"> <!-- (https://www.google.com/fonts)에서 Lobster 라는 글꼴을 가져온 것 -->
     </head>
+
     <body>
+        <!-- 대문 -->
         <div class="page-header">
             {% if user.is_authenticated %}
-                <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a> <!-- 등록 버튼 + -->
+                <!-- 임시 저장(draft) 글 목록 보기 버튼 -->
+                <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
+
+                <!-- 글 등록 버튼 + -->
+                <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+                <!-- path('post/new', views.post_new, name='post_new'), -->
             {% endif %}
             <h1><a href="/">WebWH Blog</a></h1>
         </div>
+        <!-- END 대문 -->
+
+        <!-- 템플릿 확장 -->
         <div class="content container">
             <div class="row">
                 <div class="col-md-8">
@@ -22,5 +33,8 @@
                 </div>
             </div>
         </div>
+        <!-- END 템플릿 확장 -->
+
     </body>
+
 </html>
