--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -6,11 +6,24 @@
             <div class="date">
                 {{ post.published_date }}
             </div>
+        {% else %}
+            <a class="btn btn-default" style="float:right" href="{% url 'post_publish' pk=post.pk %}">게시</a>
         {% endif %}
-        {% if user.is_authenticated %}
-            <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a> <!-- 글 수정 버튼 -->
-        {% endif %}
+
         <h1>{{ post.title }}</h1>
         <p>{{ post.text|linebreaksbr }}</p>
+
+        {% if user.is_authenticated %}
+        <div style="float:right">
+            <!-- 글 수정 버튼 -->
+            <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil">수정</span></a>
+            <!-- path('post/<int:pk>/edit/', views.post_edit, name='post_edit'), -->
+
+            <!-- 글 삭제 버튼 -->
+            <a class="btn btn-default" href="{% url 'post_remove' pk=post.pk %}"><span class="glyphicon glyphicon-remove">삭제</span></a>
+
+        </div>
+        {% endif %}
+
     </div>
 {% endblock %}
