--- a/blog/templates/blog/post_draft_list.html
+++ b/blog/templates/blog/post_draft_list.html
@@ -5,6 +5,10 @@
     <h1>임시저장한 글</h1>
     <div style="height: 100px;"></div>
 
+    {% if not posts %}
+        <h1>없음</h1>
+    {% endif %}
+
     {% for post in posts %}
         <div class="post">
             <p class="date">임시저장 일자: {{ post.created_date|date:"Y-m-d D H:i:s" }}</p> <!-- | date:"Y-m-d D H:i:s" -->
